  Content:
    - Added the AI trainer, and model training mechanic (gambling to improve models until they higher tiers, slot them into the neural computer)
    - Added the Indexer and Webbed processors (a process farm for equations)
    - Hard drives become "datacells", added recipes to load and unload data in them
    - Added glass, glass tech
    - Tech tree reorganized
  Locale:
    - French translation by Fr_Dae
  Changes:
    - (planet) Made the planet locked behind electromagnetic plant
    - (planet) Made steam 500°C (instead of 175)
    - (planet) Doubled Neodymium probability
    - (planet) Made foundations buildable on iron lava pools
    - Heating sand gives glass instead of silicon (like aai-industry)
    - Silicon is made in chem plants using additional coal and steam
    - Changed some names and descriptions (3D-data-storage -> holographic core, supercomputer -> Neural computer, raw data -> training data... )
    - Quantum-processor-productivity research 3.5* more expensive, and 100* slower (forces you to use AI cores as modules)
    - Computers can use training data for research, added as ingredients
    - Neural computer and data processor can use AI cores to speed up research/production
    - Made magnets cheaper (5 -> 1 Neodymium)
    - Made hard-drives/datacells cheaper (5 -> 1 Magnets, 5 -> 1 Advanced-circuits)
    - Optical fiber require glass
    - Holographic core require glass, cheaper otherwise
    - Made unstable models explosions ~5x more damaging
  Graphics:
    - (planet) Improved starmap icon (thanks to DjKolekson's contribution)
  Bugfixes:
    - Silicon isn't reasearch on planet discovery anymore
    - Fixed compatibility with Omnicompression
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2025-02-19
  Bugfixes:
    - Fixed removal of placed optical fibers
---------------------------------------------------------------------------------------------------