@@ -12,13 +12,14 @@ Custom terrain generation, music, tech tree, some original challenges. Unlocks a
 
 Any sort of feedback is immensely welcome, be it corrections, balance, ideas, criticism, contributions, or even questions... From here or on github issues. Note that this is the base for potentially more content, so future updates might break your setup by changing recipes or adding mechanics...
 
-# CREDITS
-- The soundtrack is these two albums by Anemoia: [Forever](https://freemusicarchive.org/music/anemoia/forever), [>>>>](https://freemusicarchive.org/music/anemoia/-6)
-- Chinese translation by rlcyyg1108
-- Russian translation by GafarovMaxim
+# CREDITS & LICENCE
+- The soundtrack is these two albums by Anemoia: [Forever](https://freemusicarchive.org/music/anemoia/forever), [>>>>](https://freemusicarchive.org/music/anemoia/-6), found on Free Music Archive under license CC-BY-NC-SA
+- Some graphics (Neural computer, Data extractor, Indexer, AI trainer, mixed ore icon, sand icons) include modified versions of Krastorio 1 and 2 and are under the GNU LGPLv3 license.
+- The Data extractor, Data processor and AI trainer contain some graphics from Hurricane046's buildings (CC BY license)
+- AI trainer sound by Euphrosyyn -- https://freesound.org/s/382687/ -- License: Creative Commons 0
+- 0.2 translations: Chinese by rlcyyg1108, Russian by GafarovMaxim, French by Fr_Dae
 - Compatibility to Silica and Silicon by Dh4mpyr
 - Starmap icon partially from DjKolekson
-- French localisation Buy Fr_Dae
 
 ![phase](https://i.imgur.com/UvsKNpJ.png)
 
@@ -26,12 +27,7 @@ Any sort of feedback is immensely welcome, be it corrections, balance, ideas, cr
 - SE space trains
 - Big accumulators
 - Big solar panels
+- Long-handed stack inserter
 - Quantum-processor infinite productivity
 
 ![screenshot](https://i.imgur.com/0jmHYaH.png)
-
-# LICENCE
-- Some graphics (Neural computer, Data extractor, AI trainer, mixed ore icon, sand icons) include modified versions of Krastorio 1 and 2 and are under the GNU LGPLv3 license.
-- The Data extractor, Data processor and AI trainer contain some graphics from Hurricane046's buildings (CC BY license)
-- The mod includes music by Anemoia, found on Free Music Archive under license CC-BY-NC-SA
-- AI trainer sound by Euphrosyyn -- https://freesound.org/s/382687/ -- License: Creative Commons 0
